--- a/BotBitsExt.Movement/BotBitsExt.Movement.nuspec
+++ b/BotBitsExt.Movement/BotBitsExt.Movement.nuspec
@@ -8,7 +8,7 @@
     <owners>$author$</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <copyright>Copyright 2015</copyright>
+    <copyright>Copyright 2015-2016</copyright>
     <tags>BotBits EverybodyEdits</tags>
   </metadata>
 </package>
